# 2pc-mpc

./: Cargo.toml
commitment/: Cargo.toml
commitment/src/: lib.rs  multipedersen.rs  pedersen.rs
src/: dkg.rs  lib.rs  localagg.rs  presign.rs  sign.rs
src/commitment/: mod.rs  multipedersen.rs  pedersen.rs
